feat: created form using shadcnUI, added barebones of hero section, and updated svg

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 
@@ -18,18 +18,79 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.classyBtn {
+  background-color: #f0f0f0;
+  color: #000000;
+  border: none;
+  padding: 1.3rem;
+  font-size: 1.2em;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 300ms, transform 300ms;
+  opacity: 0;
+  animation: fadeIn 5s forwards;
+  animation-delay: 2s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.classyBtn:hover {
+  background-color: #eaffb8;
+  transform: scale(1.05);
+}
+
+.typewriter h1 {
+  overflow: hidden;
+  border-right: .15em solid orange;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+    typing 2s steps(20, end),
+    blink-caret 0.75s step-end infinite;
+}
+
+.typewriter p {
+  opacity: 0;
+  animation: fadeIn 5s forwards;
+  animation-delay: 2s;
+}
+
+/* TYPING EFFECT */
+@keyframes typing {
+  from { width: 0; }
+  to { width: 55%; } /* Adjust width for breakpoints */
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: orange; }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 70%; } /* Adjust width for smaller screens */
+  }  
+}
+
+@media screen and (max-width: 768px) {
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 82%; } /* the 2% makes a difference I swear */
+  }
+}
+@media screen and (max-width: 485px) {
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 80%; } 
   }
 }
 
