--- a/src/index.css
+++ b/src/index.css
@@ -116,5 +116,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    background-color: #121212;
+    color: rgb(255, 255, 255);
   }
 }
