--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@font-face {
+  font-family: "OpenDyslexic-Regular";
+  src: local("OpenDyslexic-Regular"),
+    url("./fonts/OpenDyslexic-Regular.otf") format("opentype");
+  font-weight: normal;
+}
 
 @custom-variant dark (&:is(.dark *));
 
