--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding-bottom: 2rem;
   text-align: center;
@@ -37,6 +37,13 @@
   transform: scale(1.05);
 }
 
+.footer-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .typewriter h1 {
   overflow: hidden;
   border-right: .15em solid orange;
@@ -57,7 +64,7 @@
 /* TYPING EFFECT */
 @keyframes typing {
   from { width: 0; }
-  to { width: 55%; } /* Adjust width for breakpoints */
+  to { width: 42%; } /* Adjust width for breakpoints */
 }
 
 @keyframes blink-caret {
@@ -84,7 +91,7 @@
 @media screen and (max-width: 768px) {
   @keyframes typing {
     from { width: 0; }
-    to { width: 82%; } /* the 2% makes a difference I swear */
+    to { width: 50%; } /* the 2% makes a difference I swear */
   }
 }
 @media screen and (max-width: 485px) {
